Finished a1 additional notes.

--- a/cs224n-natural-language-processing-with-deep-learning/2023/assignments/a1/additional-notes/001_word_vectors.ipynb
+++ b/cs224n-natural-language-processing-with-deep-learning/2023/assignments/a1/additional-notes/001_word_vectors.ipynb
@@ -94,7 +94,7 @@
    "source": [
     "total_words = corpus.str.split(expand=True).stack()\n",
     "print(f\"Number of total words: {len(total_words)}\")\n",
-    "distinct_words = list(sorted(set(total_words)))\n",
+    "distinct_words = list(sorted(total_words.unique()))\n",
     "print(f\"Number of distinct words: {len(distinct_words)}\")\n",
     "total_words.value_counts().head(10)"
    ],
