Finished a2 additional notes.

--- a/cs224n-natural-language-processing-with-deep-learning/2023/assignments/a2/additional-notes/002_word_embedding_multi.ipynb
+++ b/cs224n-natural-language-processing-with-deep-learning/2023/assignments/a2/additional-notes/002_word_embedding_multi.ipynb
@@ -14,7 +14,7 @@
     "from IPython.display import display\n",
     "\n",
     "from utils import seed_everything, pca, moving_average\n",
-    "from word_embedding_single import SkipGram, DataLoader\n",
+    "from word_embedding_multi import SkipGram, DataLoader\n",
     "\n",
     "seed_everything()\n",
     "\n",
@@ -39,12 +39,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b14dfaa8-894d-4d68-ab4a-9f3695474f4d",
+   "id": "460c7cba-2f70-45b4-ac73-5932f0f3d0b8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "display(dataset.all_sentences[:10])\n",
-    "dataset.get_random_context()"
+    "center_word_indices, outside_word_indices = dataset.get_random_context(num_context=5, batch_size=2)\n",
+    "\n",
+    "for c, o in zip(center_word_indices, outside_word_indices):\n",
+    "    print(dataset.token_list[c], [dataset.token_list[w] for w in o])"
    ]
   },
   {
@@ -54,8 +56,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = SkipGram(dataset=dataset, vec_dim=10)\n",
-    "losses = model.fit(epochs=40000, batch_size=32, lr=0.3, anneal_every=5000, save_every=10000)"
+    "model = SkipGram(dataset=dataset, vec_dim=10, num_context=5, k=10)\n",
+    "model.center_word_vectors[center_word_indices].shape, model.outside_word_vectors[outside_word_indices].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "30ed669b-3889-4cc7-bfec-0668aa08cf5d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "losses = model.fit(epochs=30000, batch_size=32, lr=1e-2, anneal_every=4000, save_every=10000)"
    ]
   },
   {
@@ -119,6 +131,20 @@
     "for i, word in enumerate(words):\n",
     "    plt.annotate(word, xy=(result[i, 0], result[i, 1]))\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5e2044ba-7518-4f32-8224-0b55e9fe2987",
+   "metadata": {},
+   "source": [
+    "# References\n",
+    "\n",
+    "- [Efficient Estimation of Word Representations in Vector Space](http://arxiv.org/pdf/1301.3781.pdf)\n",
+    "- [Distributed Representations of Words and Phrases and their Compositionality](http://papers.nips.cc/paper/5021-distributed-representations-of-words-and-phrases-and-their-compositionality.pdf)\n",
+    "- [Demystifying Neural Network in Skip-Gram Language Modeling](https://aegis4048.github.io/demystifying_neural_network_in_skip_gram_language_modeling#Derivation-of-Cost-Function)\n",
+    "- [Optimize Computational Efficiency of Skip-Gram with Negative Sampling](https://aegis4048.github.io/optimize_computational_efficiency_of_skip-gram_with_negative_sampling)\n",
+    "- [The Illustrated Word2vec](https://jalammar.github.io/illustrated-word2vec/)"
    ]
   }
  ],
