--- a/cs224n-natural-language-processing-with-deep-learning/2023/assignments/a4/handout/main.tex
+++ b/cs224n-natural-language-processing-with-deep-learning/2023/assignments/a4/handout/main.tex
@@ -5,7 +5,7 @@
 \answerstrue %comment out to hide answers
 
 \usepackage{fontspec}
-\newfontfamily{\cherokeefam}{FreeSerif}
+% \newfontfamily{\cherokeefam}{FreeSerif}
 
 \newfontfamily{\monofam}{Latin Modern Mono}
 \usepackage{lastpage} % Required to determine the last page for the footer
